--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <div>
       <img class="logo" src="Image/TomLogo.png" alt="logo" />
       <nav>
         <ul class="nav_links">
@@ -19,6 +19,10 @@
         </ul>
       </nav>
       <a class="cta" href="#"><button>Contact</button></a>
-    </header>
+    </div>
+
+    <div class="hero">
+      <img src="Image/JoshyWoshy.jpg" class="hero_img" />
+    </div>
   </body>
 </html>
